--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Dev Boilerplate</title>
+  <title>Responsify - Test your responsive websites</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -54,8 +54,10 @@
   <div class="site-input">
     <div class="container">
       <div class="site-input__wrapper">
-        <input type="text" name="url" placeholder="http://www.example.com">
-        <i class="icon-circle-right"></i>
+        <form method="post" id="site-input">
+          <input type="text" name="url" placeholder="http://www.example.com">
+          <i class="icon-circle-right"></i>
+        </form>
       </div>
     </div>
   </div>
