Showing the breakpoint value on the page

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,12 @@
     </div>
   </div>
 
+  <div class="site-info">
+    <div class="container">
+      <div class="site-info__size"><strong>Breakpoint:</strong> <span>640</span>px</div>
+    </div>
+  </div>
+
   <div id="screen-size" class="screen-size" style="width: 640px;">
     <div class="iframe__wrapper">
       <iframe src="http://www.sanbornmediafactory.com" height="100%" width="100%" allowfullscreen="" frameborder="0"></iframe>
