updating the default site to apple

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li>
-            <a href="#" data-breakpoint="992">
+            <a href="#" data-breakpoint="1200">
               <i class="icon-display"></i>
               <span>Desktop</span>
             </a>
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="site-input__wrapper">
         <form method="post" id="site-input">
-          <input type="text" name="url" placeholder="http://www.example.com">
+          <input type="text" name="url" placeholder="http://www.apple.com">
           <i class="icon-circle-right"></i>
         </form>
       </div>
@@ -70,7 +70,7 @@
 
   <div id="screen-size" class="screen-size" style="width: 640px;">
     <div class="iframe__wrapper">
-      <iframe src="http://www.sanbornmediafactory.com" height="100%" width="100%" allowfullscreen="" frameborder="0"></iframe>
+      <iframe src="http://www.apple.com" height="100%" width="100%" allowfullscreen="" frameborder="0"></iframe>
     </div>
   </div>
 
